proyecto web angular

--- a/ioteca_web/index.html
+++ b/ioteca_web/index.html
@@ -1,1 +1,15 @@
-Hola Gulp
+<!DOCTYPE html>
+<html lang="en" ng-app>
+<head>
+	<meta charset="UTF-8">
+	<title>Document</title>
+</head>
+<body>
+	Hola HTML 5
+
+<input type="text" ng-model="nombre">
+{{ nombre }}
+
+<script src="node_modules/angular/angular.min.js"></script>
+</body>
+</html>
