--- a/ioteca_web/index.html
+++ b/ioteca_web/index.html
@@ -13,6 +13,7 @@
 <script src="node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
 
 <script src="app/app.js"></script>
+<script src="app/router.js"></script>
 <script src="app/controllers/nomCtrl.js"></script>
 </body>
 </html>
